--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "forever start index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "ngrok": "ngrok http 8000"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +15,7 @@
     "angular-material": "^0.11.0",
     "angular-material-icons": "^0.6.0",
     "angular-resource": "^1.4.6",
+    "angular-socket-io": "^0.7.0",
     "angular-ui-router": "^0.2.15",
     "hapi": "^10.0.1",
     "inert": "^3.0.1",
