--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "forever start index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "ngrok": "ngrok http 8000"
+    "start": "serve",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
