--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "angular": "^1.4.6",
+    "angular": "^1.4.7",
+    "angular-animate": "^1.4.7",
+    "angular-aria": "^1.4.7",
     "angular-material": "^0.11.0",
     "angular-material-icons": "^0.6.0",
     "angular-resource": "^1.4.6",
