--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "angular-aria": "^1.4.7",
     "angular-material": "^0.11.0",
     "angular-material-icons": "^0.6.0",
+    "angular-messages": "^1.4.7",
     "angular-resource": "^1.4.6",
     "angular-socket-io": "^0.7.0",
     "angular-ui-router": "^0.2.15",
