--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "angular-socket-io": "^0.7.0",
     "angular-ui-router": "^0.2.15",
     "mdi": "^1.2.65",
+    "ngstorage": "^0.3.9",
     "serve": "^1.4.0"
   },
   "devDependencies": {
